# near-xcc

./: Cargo.toml  README.md  test.sh
common/: Cargo.toml
common/src/: lib.rs
master/: Cargo.toml
master/src/: lib.rs
master/tests/: deposit.rs  xcc.rs
remote/: Cargo.toml
remote/src/: lib.rs
